[change] Funcionalidade do botão salvar

--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Edit.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Edit.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "Edit";
 }
 
-
+@using (Html.BeginForm())
+{
 @Html.AntiForgeryToken()
 
 <div class="content-wrap">
@@ -46,7 +47,7 @@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Save" class="btn btn-default" />
+                            <input type="submit" value="Atualizar" class="btn btn-success" />
                         </div>
                     </div>
                 </div>
@@ -58,6 +59,7 @@
         </div>
     </main>
 </div>
+}
 <!-- The Loader. Is shown when pjax happens -->
 <div class="loader-wrap hiding hide">
     <i class="fa fa-circle-o-notch fa-spin-fast"></i>
