--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Edit.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Edit.cshtml
@@ -22,7 +22,7 @@
                         <a data-widgster="close" href="#"><i class="glyphicon glyphicon-remove"></i></a>
                     </div>
                 </header>
-                <div class="widget-body">
+                <div class="form-horizontal">
 
                     <h4>TabelaPrecoViewModel</h4>
                     <hr />
@@ -44,7 +44,6 @@
                             @Html.ValidationMessageFor(model => model.TipoFipe, "", new { @class = "text-danger" })
                         </div>
                     </div>
-
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
                             <input type="submit" value="Atualizar" class="btn btn-success" />
