[add] Inclusao de notas tabelas de preco

--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Index.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Index.cshtml
@@ -63,10 +63,18 @@
                         }
                     </table>
                 </div>
+                <div>
+                </div>
             </section>
+            <div>
+                <div class="form-group">
+                    @Html.ActionLink("Nova Tabela de Preço", "Create", "TabelasPreco", null, new { @class = "btn btn-primary" })
+                </div>
+            </div>
         </div>
     </main>
 </div>
+
 
 <!-- The Loader. Is shown when pjax happens -->
 <div class="loader-wrap hiding hide">
