[add] view de create

--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model VeiculoProtegido.Application.ViewModels.TabelaPrecoViewModel
+﻿@model VeiculoProtegido.Application.ViewModels.TabelaPrecoFaixaTabelaPrecoViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -7,35 +7,54 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "TabelasPreco", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>TabelaPrecoViewModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
+    <div class="content-wrap">
+        <main id="content" class="content" role="main">
+            <ol class="breadcrumb">
+                <li>Cadastro</li>
+            </ol>
+            <h1 class="page-title"><span class="fw-semi-bold">Tabelas de Preço</span></h1>
+            <div class="row">
+                <div class="col-md-6">
+                    <section class="widget">
+                        <header>
+                            <div class="widget-controls">
+                                <a href="#"><i class="glyphicon glyphicon-cog"></i></a>
+                                <a href="#"><i class="fa fa-refresh"></i></a>
+                                <a href="#" data-widgster="close"><i class="glyphicon glyphicon-remove"></i></a>
+                            </div>
+                        </header>
+                        <div class="widget-body">
+                            <form class="form-horizontal" role="form">
+                                <fieldset>
+                                    <div class="row">
+                                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                        <div class="form-group">
+                                            @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-sm-2" })
+                                            <div class="col-md-10">
+                                                @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control", placeholder = "Digite a Descrição Aqui" } })
+                                                @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    </div>
+                                        @*@Html.Partial("_FaixaTabelaPreco")*@
+                                        <div class="form-actions">
+                                            <div class="row">
+                                                <div class="col-sm-offset-4 col-sm-7">
+                                                    <button id="btnAdicionar" type="submit" class="btn btn-primary">Adicionar</button>
+                                                    <button id="btnCancelar" type="button" class="btn btn-inverse">Cancelar</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                </fieldset>
+                            </form>
+                        </div>
+                    </section>
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TipoFipe, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TipoFipe, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TipoFipe, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        @Html.Partial("_FaixaTabelaPreco")
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
+        </main>
     </div>
 }
 
