--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
@@ -39,6 +39,17 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <br />
+                                    <div class="row">
+                                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                        <div class="form-group">
+                                            @Html.LabelFor(model => model.TipoFipe, htmlAttributes: new { @class = "control-label col-sm-2" })
+                                            <div class="col-md-4">
+                                                @Html.EditorFor(model => model.TipoFipe, new { htmlAttributes = new { @class = "form-control", placeholder = "Digite o Tipo da Tabela FIPE Aqui:carros, caminhoes, motos" } })
+                                                @Html.ValidationMessageFor(model => model.TipoFipe, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    </div>
                                         @*@Html.Partial("_FaixaTabelaPreco")*@
                                         <div class="form-actions">
                                             <div class="row">
