--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
@@ -27,36 +27,29 @@
                             </div>
                         </header>
                         <div class="widget-body">
-                            <form class="form-horizontal" role="form">
+                            <form role="form">
                                 <fieldset>
                                     <div class="row">
                                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                        <div class="form-group">
-                                            @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-sm-2" })
-                                            <div class="col-md-10">
-                                                @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control", placeholder = "Digite a Descrição Aqui" } })
-                                                @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
+                                            <div class="form-group">
+                                                <div class="col-sm-6">
+                                                    @Html.LabelFor(model => model.Descricao)
+                                                    @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control", placeholder = "Digite a Descrição Aqui" } })
+                                                    @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
+                                                </div>
+                                                <div class="col-sm-4">
+                                                    @Html.LabelFor(model => model.TipoFipe)
+                                                    @Html.DropDownListFor(model => model.TipoFipe, new SelectList(ViewBag.TipoFIPEList, "TipoFipeId", "TipoFIPEDescricao"))
+                                                    @Html.ValidationMessageFor(model => model.TipoFipe, "", new { @class = "text-danger" })
+                                                </div>
                                             </div>
-                                        </div>
-                                    </div>
-                                    <br />
-                                    <div class="row">
-                                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                        <div class="form-group">
-                                            @Html.LabelFor(model => model.TipoFipe, htmlAttributes: new { @class = "control-label col-sm-2" })
-                                            <div class="col-md-4">
-                                                @Html.EditorFor(model => model.TipoFipe, new { htmlAttributes = new { @class = "form-control", placeholder = "Digite o Tipo da Tabela FIPE Aqui:carros, caminhoes, motos" } })
-                                                @Html.ValidationMessageFor(model => model.TipoFipe, "", new { @class = "text-danger" })
-                                            </div>
-                                        </div>
                                     </div>
                                         @*@Html.Partial("_FaixaTabelaPreco")*@
-                                        <div class="form-actions">
-                                            <div class="row">
-                                                <div class="col-sm-offset-4 col-sm-7">
-                                                    <button id="btnAdicionar" type="submit" class="btn btn-primary">Adicionar</button>
-                                                    <button id="btnCancelar" type="button" class="btn btn-inverse">Cancelar</button>
-                                                </div>
+                                    <br />
+                                        <div class="col-sm-offset-6">
+                                            <div class="btn-toolbar">
+                                                <button id="btnAdicionar" type="submit" class="btn btn-primary pull-right">Adicionar</button>
+                                                <button id="btnCancelar" type="button" class="btn btn-inverse pull-right">Cancelar</button>
                                             </div>
                                         </div>
                                 </fieldset>
