--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
@@ -39,7 +39,7 @@
                                                 </div>
                                                 <div class="col-sm-4">
                                                     @Html.LabelFor(model => model.TipoFipe)
-                                                    @Html.DropDownListFor(model => model.TipoFipe, new SelectList(ViewBag.TipoFIPEList, "Id", "Descricao"), "Selecione...")
+                                                    @Html.DropDownListFor(model => model.TipoFipe, new SelectList(ViewBag.TipoFIPEList, "Id", "Descricao"), string.Empty)
                                                     @Html.ValidationMessageFor(model => model.TipoFipe, "", new { @class = "text-danger" })
                                                 </div>
                                             </div>
