[fix] View de Create merclada a partial view de TipoFIPE.

--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
@@ -39,7 +39,8 @@
                                                 </div>
                                                 <div class="col-sm-4">
                                                     @Html.LabelFor(model => model.TipoFipe)
-                                                    @Html.DropDownListFor(model => model.TipoFipe, new SelectList(ViewBag.TipoFIPEList, "Id", "Descricao"), string.Empty)
+                                                    @*@Html.DropDownListFor(model => model.TipoFipe, new SelectList(ViewBag.TipoFIPEList, "Id", "Descricao"), string.Empty)*@
+                                                    @Html.Partial("_TipoFIPE", VeiculoProtegido.Application.ViewModels.TipoFIPEViewModel.ListarTipoFIPE())
                                                     @Html.ValidationMessageFor(model => model.TipoFipe, "", new { @class = "text-danger" })
                                                 </div>
                                             </div>
