--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Adicionando</h2>
 
 
 @using (Html.BeginForm("Create", "TabelasPreco", FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -40,7 +40,7 @@
                                                 <div class="col-sm-4">
                                                     @Html.LabelFor(model => model.TipoFipe)
                                                     @*@Html.DropDownListFor(model => model.TipoFipe, new SelectList(ViewBag.TipoFIPEList, "Id", "Descricao"), string.Empty)*@
-                                                    @Html.Partial("_TipoFIPE", VeiculoProtegido.Application.ViewModels.TipoFIPEViewModel.ListTipoFIPE())
+                                                    @Html.Partial("_TipoFIPE", new VeiculoProtegido.Application.ViewModels.TipoFIPEViewModel(@Model.TipoFipe))
                                                     @Html.ValidationMessageFor(model => model.TipoFipe, "", new { @class = "text-danger" })
                                                 </div>
                                             </div>
