--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/_TipoFIPE.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/_TipoFIPE.cshtml
@@ -1,13 +1,20 @@
-﻿@model IEnumerable<VeiculoProtegido.Application.ViewModels.TipoFIPEViewModel>
+﻿@model VeiculoProtegido.Application.ViewModels.TipoFIPEViewModel
 <div class="form-group">
     <select id="cboTipoFIPE"
             data-placeholder="Selecionar Tipo"
             class="select2 form-control"
-            tabindex="-1"
             name="TipoFIPE">
         <option value=""></option>
-        @foreach (var item in Model)
+        @foreach (var item in Model.TipoFIPEViewModels)
         {
-            <option value="@item.Id">@item.Descricao</option>}
+            if (item.Id.Equals(Model.Id))
+            {
+                <option value="@item.Id" selected>@item.Descricao</option>
+            }
+            else
+            {
+                <option value="@item.Id">@item.Descricao</option>
+            }
+        }
     </select>
 </div>
