[change] Finalizado funcionamento da gravação da tabela de preço.

--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/_TipoFIPE.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/_TipoFIPE.cshtml
@@ -1,5 +1,5 @@
 ﻿@model VeiculoProtegido.Application.ViewModels.TipoFIPEViewModel
-<div class="form-group">
+@*<div class="form-group">*@
     <select id="cboTipoFIPE"
             data-placeholder="Selecionar Tipo"
             class="select2 form-control"
@@ -17,4 +17,4 @@
             }
         }
     </select>
-</div>
+@*</div>*@
