--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
@@ -44,9 +44,42 @@
                                                     @Html.ValidationMessageFor(model => model.TipoFipe, "", new { @class = "text-danger" })
                                                 </div>
                                             </div>
-                                    </div>
-                                        @*@Html.Partial("_FaixaTabelaPreco")*@
-                                    <br />
+                                            <div class="form-group">
+                                                <div class="col-sm-2">
+                                                    @Html.LabelFor(model => model.PlanoId)
+                                                    @Html.EditorFor(model => model.PlanoId, new { htmlAttributes = new { @class = "form-control" } })
+                                                    @Html.ValidationMessageFor(model => model.PlanoId, "", new { @class = "text-danger" })
+                                                </div>
+                                                <div class="col-sm-5">
+                                                    @Html.LabelFor(model => model.ValorDe)
+                                                    @Html.EditorFor(model => model.ValorDe, new { htmlAttributes = new { @class = "form-control" } })
+                                                    @Html.ValidationMessageFor(model => model.ValorDe, "", new { @class = "text-danger" })
+                                                </div>
+                                                <div class="col-sm-5">
+                                                    @Html.LabelFor(model => model.ValorAte)
+                                                    @Html.EditorFor(model => model.ValorAte, new { htmlAttributes = new { @class = "form-control" } })
+                                                    @Html.ValidationMessageFor(model => model.ValorAte, "", new { @class = "text-danger" })
+                                                </div>
+                                            </div>
+                                        <div class="form-group">
+                                            <div class="col-sm-4">
+                                                @Html.LabelFor(model => model.ValorMensal)
+                                                @Html.EditorFor(model => model.ValorMensal, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.ValorMensal, "", new { @class = "text-danger" })
+                                            </div>
+                                            <div class="col-sm-4">
+                                                @Html.LabelFor(model => model.ValorParticipacaoEvento)
+                                                @Html.EditorFor(model => model.ValorParticipacaoEvento, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.ValorParticipacaoEvento, "", new { @class = "text-danger" })
+                                            </div>
+                                            <div class="col-sm-4">
+                                                @Html.LabelFor(model => model.ValorAdesao)
+                                                @Html.EditorFor(model => model.ValorAdesao, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.ValorAdesao, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                            <br />
+                                        </div>
                                         <div class="col-sm-offset-6">
                                             <div class="btn-toolbar">
                                                 <button id="btnAdicionar" type="submit" class="btn btn-primary pull-right">Adicionar</button>
