--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
@@ -100,20 +100,5 @@
     <i class="fa fa-circle-o-notch fa-spin-fast"></i>
 </div>
 
-<!-- common app js -->
-<script src="~/js/settings.js"></script>
-<script src="~/js/app.js"></script>
-
-<!-- common libraries. required for every page-->
-<script src="~/vendor/jquery/dist/jquery.min.js"></script>
-<script src="~/vendor/jquery-pjax/jquery.pjax.js"></script>
-<script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
-<script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
-<script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
-<script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
-<script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js"></script>
-<script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
-<script src="~/vendor/slimScroll/jquery.slimscroll.min.js"></script>
-<script src="~/vendor/widgster/widgster.js"></script>
-<script src="~/vendor/pace.js/pace.js" data-pace-options='{ "target": ".content-wrap", "ghostTime": 1000 }'></script>
-<script src="~/vendor/jquery-touchswipe/jquery.touchSwipe.js"></script>
+@Scripts.Render("~/app")
+@Scripts.Render("~/cadastro")
