--- a/src/VeiculoProtegido.UI.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Shared/_Layout.cshtml
@@ -510,6 +510,66 @@
                 </h5>
                 <ul class="message-list"></ul>
             </div>
+            <div class="col-md-4">
+                <section class="widget">
+                    <header>
+                        <h5>
+                            Market <span class="fw-semi-bold">Stats</span>
+                        </h5>
+                        <div class="widget-controls">
+                            <a href="#" data-widgster="close"><i class="glyphicon glyphicon-remove"></i></a>
+                        </div>
+                    </header>
+                    <div class="widget-body">
+                        <h3>$720 Earned</h3>
+                        <p class="fs-mini text-muted mb mt-sm">
+                            Target <span class="fw-semi-bold">$820</span> day earnings
+                            is <span class="fw-semi-bold">96%</span> reached.
+                        </p>
+                    </div>
+                    <div class="widget-table-overflow">
+                        <table class="table table-striped table-sm">
+                            <thead class="no-bd">
+                                <tr>
+                                    <th>
+                                        <div class="checkbox">
+                                            <input id="checkbox210" type="checkbox" data-check-all="">
+                                            <label for="checkbox210"></label>
+                                        </div>
+                                    </th>
+                                    <th></th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <div class="checkbox">
+                                            <input id="checkbox212" type="checkbox">
+                                            <label for="checkbox212"></label>
+                                        </div>
+                                    </td>
+                                    <td>HP Core i7</td>
+                                    <td class="text-align-right fw-semi-bold">$346.1</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="checkbox">
+                                            <input id="checkbox214" type="checkbox">
+                                            <label for="checkbox214"></label>
+                                        </div>
+                                    </td>
+                                    <td>Air Pro</td>
+                                    <td class="text-align-right fw-semi-bold">$533.1</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="widget-body mt-xlg">
+                        <div id="rickshaw" class="chart-overflow-bottom"></div>
+                    </div>
+                </section>
+            </div>
             <footer class="chat-sidebar-footer form-group">
                 <input class="form-control input-dark fs-mini" id="chat-sidebar-input" type="text" placeholder="Type your message">
             </footer>
@@ -526,42 +586,17 @@
     <div class="loader-wrap hiding hide">
         <i class="fa fa-circle-o-notch fa-spin-fast"></i>
     </div>
-
     <!-- common libraries. required for every page-->
-    <script src="~/vendor/jquery/dist/jquery.min.js"></script>
-    <script src="~/vendor/jquery-pjax/jquery.pjax.js"></script>
-    <script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
-    <script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
-    <script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
-    <script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
-    <script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js"></script>
-    <script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
-    <script src="~/vendor/slimScroll/jquery.slimscroll.min.js"></script>
-    <script src="~/vendor/widgster/widgster.js"></script>
-    <script src="~/vendor/pace.js/pace.js" data-pace-options='{ "target": ".content-wrap", "ghostTime": 1000 }'></script>
-    <script src="~/vendor/jquery-touchswipe/jquery.touchSwipe.js"></script>
-    <script src="~/vendor/jquery-touchswipe/jquery.touchSwipe.js"></script>
+    @Scripts.Render("~/bootstrap")
 
     <!-- common app js -->
-    <script src="~/js/settings.js"></script>
-    <script src="~/js/app.js"></script>
+    @Scripts.Render("~/app")
 
     <!-- page specific libs -->
-    <script id="test" src="~/vendor/underscore/underscore.js"></script>
-    <script src="~/vendor/jquery.sparkline/index.js"></script>
-    <script src="~/vendor/jquery.sparkline/index.js"></script>
-    <script src="~/vendor/d3/d3.min.js"></script>
-    <script src="~/vendor/rickshaw/rickshaw.min.js"></script>
-    <script src="~/vendor/raphael/raphael-min.js"></script>
-    <script src="~/vendor/jQuery-Mapael/js/jquery.mapael.js"></script>
-    <script src="~/vendor/jQuery-Mapael/js/maps/usa_states.js"></script>
-    <script src="~/vendor/jQuery-Mapael/js/maps/world_countries.js"></script>
-    <script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/popover.js"></script>
-    <script src="~/vendor/bootstrap_calendar/bootstrap_calendar/js/bootstrap_calendar.min.js"></script>
-    <script src="~/vendor/jquery-animateNumber/jquery.animateNumber.min.js"></script>
+    @Scripts.Render("~/layout")
 
     <!-- page specific js -->
-    @*<script src="~/js/index.js"></script>*@
+    <script src="~/js/_layout.js"></script>
 
 
 </body>
